<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/header_title"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:text="Who said the quote?"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_main_quotes_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_main_quote_image"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_main_quote_image"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-3dp"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/tv_main_quotes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="Question"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/topRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        app:layout_constraintVertical_bias="0.651" />

    <TextView
        android:id="@+id/tv_main_quotes_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="8dp"
        android:text=" Quotes Left"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_main_submit_answer"
        app:layout_constraintLeft_toLeftOf="@id/tv_main_quotes_remaining_count"
        app:layout_constraintTop_toBottomOf="@id/bottomRow"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/tv_main_quotes_remaining_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="100"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_main_quotes_remaining"
        app:layout_constraintEnd_toStartOf="@+id/tv_main_quotes_remaining"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomRow"
        app:layout_constraintTop_toTopOf="@+id/tv_main_quotes_remaining"
        app:layout_constraintVertical_bias="0.458" />

    <Button
        android:id="@+id/btn_main_submit_answer"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_main_quotes_remaining"
        app:layout_constraintVertical_bias="0.896" />

    <LinearLayout
        android:id="@+id/topRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/bottomRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_main_answer_1"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:text="Text1" />

        <Button
            android:id="@+id/btn_main_answer_2"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_main_submit_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_main_answer_3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:text="Text3" />

        <Button
            android:id="@+id/btn_main_answer_4"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text4" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>